cmake_minimum_required(VERSION 3.21)

include(FetchContent)
FetchContent_Declare(
        serious-cmake-library
        GIT_REPOSITORY git@github.com:UsatiyNyan/serious-cmake-library.git
        GIT_TAG main
)
FetchContent_MakeAvailable(serious-cmake-library)

sl_project_prologue(
    CXX_STANDARD 23
    C_STANDARD 17)
project(
        serious-runtime-library
        VERSION 0.0.0
        DESCRIPTION "runtime library"
        HOMEPAGE_URL "TODO"
        LANGUAGES CXX)

add_library(${PROJECT_NAME} INTERFACE)
add_library(sl::rt ALIAS ${PROJECT_NAME})
target_include_directories(${PROJECT_NAME} INTERFACE include)

add_subdirectory(dependencies)

if (NOT PROJECT_IS_TOP_LEVEL)
    return()
endif ()

sl_compiler_warnings(${PROJECT_NAME} WARNINGS_AS_ERRORS)

include(CTest)
if (BUILD_TESTING)
    add_subdirectory(test)
endif ()
